2003-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_manage.c: better handling of zero sample file size when
	  opening in read only mode

	* module/x86/op_nmi.c: printk format fix

2003-05-16  John Levon  <levon@movementarian.org>

	* pp/counter_profile.cpp: remove bogus cpu speed
	consistency check

2003-05-09  John Levon  <levon@movementarian.org>

	* m4/Makefile.am:
	* m4/compileroption.m4: add a generalised compiler option
	tester

	* configure.in: use it, add -fno-common

2003-05-09  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c:
	* dae/oprofiled.c: remove duplicate declaration found
	via -fno-common

2003-05-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: fix validation errors from xmllint --valid

2003-04-28  Alex Tsariounov  <alext@fc.hp.com>

	* module/ia64/op_pmu.c: fix compile

2003-04-24  Philippe Elie  <phil.el@wanadoo.fr>

	* module/compat22.h: add cpuid_edx when linux version < 2.2.21

2003-04-24  Dave Jones <davej@codemonkey.org.uk>

	* events/x86-64.hammer.events:
	* events/x86-64.hammer.unit_masks: typo fixes from AMD.
	* module/x86/cpu_type.c: Check for APIC on Athlon before enabling it.

2003-04-15  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386-ht.events: all events allow only one counter, remove
	  three events due to ESCR restricton.
	* events/i386.events: add some comments.

	* module/x86/op_model_p4.c: synch with linux 2.5 mainline
	  - except events CTR_BPU_0 all virtual counter was not working.
	  - Prevents a segfault when using incorrect counter number.
	  - ESCR event select is 6 bits length not 5.
	  - Don't fail silently in p4_setup_ctrs().
	* module/x86/op_msr.h: match name used in linux.

2003-04-15  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml: small english fixes

2003-04-14  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c:
	* dae/opd_proc.c:
	* dae/oprofiled.c:
	* utils/opcontrol:
	* doc/oprofile.1.in: