@@ -1,3 +1,7 @@
+2003-05-18  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libregex/stl.pat.in: add list<T>::{const_}+iterator
+
 2003-05-17  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libdb/db_manage.c: better handling of zero sample file size when
